// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

// See https://developers.google.com/protocol-buffers for what's going on here.

syntax = "proto3";

import "expr/src/relation.proto";

package mz_compute_client.plan.top_k;

message ProtoTopKPlan {
    oneof kind {
        ProtoBasicTopKPlan basic = 1;
        ProtoMonotonicTopKPlan monotonic_top_k = 2;
        ProtoMonotonicTop1Plan monotonic_top_1 = 3;
    }
}

message ProtoBasicTopKPlan {
    repeated uint64 group_key = 1;
    repeated mz_expr.relation.ProtoColumnOrder order_key = 2;
    optional uint64 limit = 3;
    uint64 offset = 4;
    uint64 arity = 5;
    repeated uint64 buckets = 6;
}

message ProtoMonotonicTop1Plan {
    repeated uint64 group_key = 1;
    repeated mz_expr.relation.ProtoColumnOrder order_key = 2;
    bool must_consolidate = 3;
}

message ProtoMonotonicTopKPlan {
    repeated uint64 group_key = 1;
    repeated mz_expr.relation.ProtoColumnOrder order_key = 2;
    optional uint64 limit = 3;
    uint64 arity = 4;
    bool must_consolidate = 5;
}
